# mobiscroll-connect-sdks

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci-dotnet.yml  ci-go.yml  ci-java.yml  ci-node.yml  ci-php.yml  ci-python.yml  ci-ruby.yml  release-dotnet.yml  release-go.yml  release-java.yml  release-node.yml  release-php.yml  release-python.yml  release-ruby.yml
scripts/: bump-version.sh  release.sh
sdks/dotnet/: .gitignore  CLAUDE.md  Mobiscroll.Connect.slnx  README.md
sdks/go/: .gitignore  CLAUDE.md  README.md  auth.go  auth_test.go  calendars.go  calendars_test.go  client.go  client_test.go  config.go  errors.go  errors_test.go  events.go  events_test.go  go.mod  models.go  provider.go  serialization_test.go  transport.go  transport_test.go  version.go
sdks/java/: .gitignore  CLAUDE.md  README.md  pom.xml
sdks/node/: .gitignore  CLAUDE.md  LICENSE  README.md  eslint.config.mjs  jest.config.js  package-lock.json  package.json  pre-release.sh  tsconfig.json
sdks/php/: .gitignore  CLAUDE.md  INDEX.md  README.md  composer.json  phpunit.xml
sdks/python/: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
sdks/python/examples/: .env.example  async_basic.py  event_crud.py  sync_basic.py
sdks/python/minimal-app/: app.py  requirements.txt
sdks/python/minimal-app/templates/: calendars.html  event_edit.html  events.html  ui.html
sdks/python/mobiscroll_connect/: __init__.py  api_client.py  async_api_client.py  client.py  config.py  exceptions.py  models.py
sdks/python/mobiscroll_connect/_internal/: errors.py  payloads.py
sdks/python/mobiscroll_connect/aio/: __init__.py  client.py  resources.py
sdks/python/mobiscroll_connect/resources/: __init__.py  auth.py  calendars.py  events.py
sdks/python/tests/: conftest.py  test_async.py  test_auth.py  test_calendars.py  test_events.py  test_exceptions.py  test_models.py  test_payloads.py
sdks/ruby/: .gitignore  .rubocop.yml  CLAUDE.md  Gemfile  README.md  (+1 more)
(+172 files in other folders)
